@@ -11,11 +11,37 @@
 	directly available to out123 and others via libsyn123.
 */
 
-#include <unistd.h>
-#include <stdlib.h>
-#include <stdint.h>
-#include <stdio.h>
-#include <strings.h>
+#include "config.h"
+
+#include "syn123_int.h"
+
+// Borrowing the random number algorithm from the dither code.
+// xorshift random number generator
+// See http://www.jstatsoft.org/v08/i14/paper on XOR shift random number generators.
+static float rand_xorshift32(uint32_t *seed)
+{
+	union
+	{
+		uint32_t i;
+		float f;
+	} fi;
+	
+	fi.i = *seed;
+	fi.i ^= (fi.i<<13);
+	fi.i ^= (fi.i>>17);
+	fi.i ^= (fi.i<<5);
+	*seed = fi.i;
+	
+	/* scale the number to [0, 1] */
+#ifdef IEEE_FLOAT
+	fi.i = (fi.i>>9)|0x3f800000;
+	fi.f -= 1.0f;
+#else
+	fi.f = (double)fi.i / 4294967295.0;
+#endif
+	return fi.f;
+}
+
 
 /*
 	Brain dump for the speaker model:
@@ -58,42 +84,47 @@
 	zero.
 */
 
-/* Sampling rate as base for all time. */
-long rate;
-/* Time is counted in sampling intervals of this size.
-   (inverse of sampling rate). */
-double time_interval;
-/* Strength of the last event, compared to full scale.
-   This is for capturing an event detected in the
-   recovery period. */
-double event_strength;
-/* Age of last event in intervals. Based on this, the discharge
-   force is applied or not, strength of a new discharge computed
-   (if event_age > dead time). */
-/* Scaling of discharge force, in relation to speaker movement. */
-double force_scale;
-/* Intervals since last event, if it is recent.  */
-long event_age;
-/* Number of intervals for that a new event is not detected.
-   This is also the duration of the discharge. */
-double dead_s;
-long dead_time;
-/* Number of intervals till recovery after dead time. */
-long recover_time;
+struct geigerspace
+{
+	// Time is counted in sampling intervals of this size.
+	// (inverse of sampling rate).
+	double time_interval;
+	// Strength of the last event, compared to full scale.
+	// This is for capturing an event detected in the
+	// recovery period.
+	double event_strength;
+	// Age of last event in intervals. Based on this, the discharge
+	// force is applied or not, strength of a new discharge computed
+	// (if event_age > dead time).
+	// Scaling of discharge force, in relation to speaker movement.
+	double force_scale;
+	// Intervals since last event, if it is recent.
+	long event_age;
+	// Number of intervals for that a new event is not detected.
+	// This is also the duration of the discharge.
+	double dead_s;
+	long dead_time;
+	// Number of intervals till recovery after dead time.
+	long recover_time;
+	// random state
+	uint32_t rand_seed;
+	// Threshold for random value to jump over.
+	float thres;
 
-/* Oscillator properties. */
-double mass;     /* mass (inertia) of speaker in kg  */
-double spring;   /* spring constant k in N/m         */
-double friction; /* friction coefficient in kg/(s m) */
-double friction_fixed; /* Speed-independent friction. */
+	// Oscillator properties.
+	double mass;     // mass (inertia) of speaker in kg
+	double spring;   // spring constant k in N/m
+	double friction; // friction coefficient in kg/(s m)
+	double friction_fixed; // Speed-independent friction.
 
-/* State variables. */
-double pos;   /* position of speaker [-1:1]       */
-double speed; /* speed of speaker movement        */
+	// State variables.
+	double pos;   // position of speaker [-1:1]
+	double speed; // speed of speaker movement
+};
 
-/* Soft clipping as speaker property. It can only move so far.
-   Of course this could be produced by a nicely nonlinear force, too. */
-float soft_clip(double x)
+// Soft clipping as speaker property. It can only move so far.
+// Of course this could be produced by a nicely nonlinear force, too.
+static float soft_clip(double x)
 {
 	const float w = 0.1;
 	if(x > 1.-w)
@@ -103,168 +134,164 @@ float soft_clip(double x)
 	return x;
 }
 
-double sign(double val)
+static double sign(double val)
 {
 	return val < 0 ? -1. : +1;
 }
 
-/* Advance speaker position by one time interval, applying the given force. */
-float speaker(double force)
+// Advance speaker position by one time interval, applying the given force.
+static double speaker(struct geigerspace *gs, double force)
 {
 	double dx, dv;
-	/* Some maximal numeric time step to work nicely for small sampling
-	   rates. Unstable numerics make a sound, too. */
+	// Some maximal numeric time step to work nicely for small sampling
+	// rates. Unstable numerics make a sound, too.
 	double euler_step = 1e-5;
 	long steps = 0;
 	do
 	{
-		double step = time_interval-steps*euler_step;
+		double step = gs->time_interval-steps*euler_step;
 		if(step > euler_step)
 			step = euler_step;
-		/* dx = v dt
-		   dv = (G(t) - k x(t) - sign(v(t)) r v(t)^2) / m dt */
-		dx = speed*step;
-		dv = (force - spring*pos - sign(speed)*friction*speed*speed)
-		   / mass * step;
-		pos   += dx;
-		speed += dv;
-		/* Apply some fixed friction to get down to zero. */
-		if(speed)
+		// dx = v dt
+		// dv = (G(t) - k x(t) - sign(v(t)) r v(t)^2) / m dt
+		dx = gs->speed*step;
+		dv = ( force - gs->spring*gs->pos
+		   - sign(gs->speed)*gs->friction*gs->speed*gs->speed )
+		   / gs->mass * step;
+		gs->pos   += dx;
+		gs->speed += dv;
+		// Apply some fixed friction to get down to zero.
+		if(gs->speed)
 		{
-			double ff = -sign(speed)*friction_fixed/mass*step;
-			if(sign(speed+ff) == sign(speed))
-				speed += ff;
+			double ff = -sign(gs->speed)*gs->friction_fixed/gs->mass*step;
+			if(sign(gs->speed+ff) == sign(gs->speed))
+				gs->speed += ff;
 			else
-				speed = 0.;
+				gs->speed = 0.;
 		}
-	} while(++steps*euler_step < time_interval);
-	return soft_clip(pos);
+	} while(++steps*euler_step < gs->time_interval);
+	return soft_clip(gs->pos);
 }
 
-/* The logic of the Geiger-Mueller counter.
-   Given an event (or absence of) for this time interval, return
-   the discharge force to apply to the speaker. */
-double discharge_force(int event)
+// The logic of the Geiger-Mueller counter.
+// Given an event (or absence of) for this time interval, return
+// the discharge force to apply to the speaker.
+static double discharge_force(struct geigerspace *gs, int event)
 {
 	double strength = 0.;
-	if(event_age >= 0) /* If there was a recent event. */
+	if(gs->event_age >= 0) // If there was a recent event.
 	{
-		/* Apply current event force until dead time is reached. */
-		if(++event_age > dead_time)
+		// Apply current event force until dead time is reached.
+		if(++gs->event_age > gs->dead_time)
 		{
-			long newtime = event_age - dead_time;
-			if(newtime < recover_time)
+			long newtime = gs->event_age - gs->dead_time;
+			if(newtime < gs->recover_time)
 			{
-				event_strength = 1.*newtime/recover_time;
+				gs->event_strength = 1.*newtime/gs->recover_time;
 			}
-			else /* Possible event after full recovery. */
+			else // Possible event after full recovery.
 			{
-				event_age = -1;
-				event_strength = 1.;
+				gs->event_age = -1;
+				gs->event_strength = 1.;
 			}
 		}
-		else /* Still serving the old event. */
+		else // Still serving the old event.
 		{
-			strength = event_strength;
+			strength = gs->event_strength;
 			event = 0;
 		}
 	}
 	if(event)
 	{
-		event_age = 0;
-		strength = event_strength;
+		gs->event_age = 0;
+		strength = gs->event_strength;
 	}
-	return strength*force_scale;
+	return strength*gs->force_scale;
 }
 
-int main(int argc, char** argv)
+static void geiger_init(struct geigerspace *gs, double activity, long rate)
 {
-	double duration;
-	unsigned long samplecount;
-	unsigned long events;
-	double activity;
-	double event_likelihood;
-	int thres;
-	int outmode = 0;
-	if(argc < 2)
-	{
-		fprintf(stderr
-		,	"usage: "
-			"%s <bin|txt> [duration_in_seconds] [activity] [sampling_rate]\n"
-		, argv[0]);
-		fprintf(stderr
-		,	"\nDuration can be negative for endless runtime, default activity is 10/s and"
-			"\ndefault sampling rate is 48000 Hz\n");
-		return 1;
-	}
-	if(!strcasecmp(argv[1], "bin"))
-		outmode = 1;
-	else if(!strcasecmp(argv[1], "txt"))
-		outmode = 2;
-	if(!outmode)
-	{
-		fprintf(stderr, "%s: invalid output mode given\n", argv[0]);
-		return 2;
-	}
-	duration = argc >= 3 ? atof(argv[2]) : -1;
-	/* Activity is in average events per second. */
-	activity = argc >= 4 ? atof(argv[3]) : 10;
 	if(activity < 0)
 		activity = 0.;
+	gs->time_interval = 1./rate;
+	gs->event_strength = 1.;
+	gs->event_age = -1;
+	// In the order of 100 us. Chose a large time to produce sensible results down
+	// to 8000 Hz sampling rate.
+	gs->dead_s = 0.0002;
+	gs->dead_time = (long)(gs->dead_s*rate+0.5);
+	gs->recover_time = 2*gs->dead_time;
+	// Let's artitrarily define maximum speaker displacement
+	// as 1 mm and specify values accordingly.
+	gs->pos = 0.;
+	gs->speed = 0.;
+	// Mass and spring control the self-oscillation frequency.
+	gs->mass = 0.02;
+	gs->spring = 1000000;
+	// Some dynamic friction is necessary to keep the unstable numeric
+	// solution in check. A kind of lowpass filter, too, of course.
+	gs->friction = 0.02;
+	// Some hefty fixed friction prevents self-oscillation of speaker
+	// (background sine wave). But you want _some_ of it.
+	gs->friction_fixed = 20000;
+	// Experimenting, actually. Some relation to the speaker.
+	gs->force_scale = 50000.*gs->mass*0.001/(4.*gs->dead_s*gs->dead_s);
 
-	rate = argc >= 5 ? atol(argv[4]) : 48000;
-	fprintf(stderr, "rate: %lu\n", rate);
-	time_interval = 1./rate;
-	event_strength = 1.;
-	event_age = -1;
-	/* In the order of 100 us. Chose a large time to produce sensible results down
-	   to 8000 Hz sampling rate. */
-	dead_s = 0.0002;
-	dead_time = (long)(dead_s*rate+0.5);
-	recover_time = 2*dead_time;
-	fprintf(stderr, "dead: %ld recover: %ld\n", dead_time, recover_time);
-	/* Let's artitrarily define maximum speaker displacement
-	   as 1 mm and specify values accordingly. */
-	pos = 0.;
-	speed = 0.;
-	/* Mass and spring control the self-oscillation frequency. */
-	mass = 0.02;
-	spring = 1000000;
-	/* Some dynamic friction is necessary to keep the unstable numeric
-	   solution in check. A kind of lowpass filter, too, of course. */
-	friction = 0.02;
-	/* Some hefty fixed friction prevents self-oscillation of speaker
-	   (background sine wave). But you want _some_ of it. */
-	friction_fixed = 20000;
-	/* Experimenting, actually. Some relation to the speaker. */
-	force_scale = 50000.*mass*0.001/(4.*dead_s*dead_s);
-
-	samplecount = duration >= 0 ? duration/time_interval+0.5 : 0;
-	fprintf(stderr, "runtime: %g (%lu samples)\n", duration, samplecount);
-	srand(123456);
-	event_likelihood = activity*time_interval;
+	gs->rand_seed = 123456;
+	float event_likelihood = activity*gs->time_interval;
 	if(event_likelihood > 1.)
 		event_likelihood = 1.;
-	thres = RAND_MAX*(1.-event_likelihood);
-	fprintf(stderr, "threshold: %i / %i\n", thres, RAND_MAX);
+	gs->thres = 1.-event_likelihood;
+}
 
-	events = 0;
-	for(unsigned long i=0; duration < 0 || i<samplecount; ++i)
+static void geiger_generator(syn123_handle *sh, int samples)
+{
+	struct geigerspace *gs = sh->handle;
+	for(int i=0; i<samples; ++i)
+		sh->workbuf[1][i] = speaker( gs
+		,	discharge_force(gs, rand_xorshift32(&gs->rand_seed)>gs->thres) );
+}
+
+int attribute_align_arg
+syn123_setup_geiger(syn123_handle *sh, double activity, size_t *period)
+{
+	int ret = SYN123_OK;
+	if(!sh)
+		return SYN123_BAD_HANDLE;
+	syn123_setup_silence(sh);
+	struct geigerspace *handle = malloc(sizeof(*handle));
+	if(!handle)
+		return SYN123_DOOM;
+	geiger_init(handle, activity, sh->fmt.rate);
+	sh->handle = handle;
+	sh->generator = geiger_generator;
+	if(sh->maxbuf)
 	{
-		int event = rand()>thres;
-		if(event)
-			++events;
-		float val = speaker(discharge_force(event));
-		switch(outmode)
+		size_t samplesize = MPG123_SAMPLESIZE(sh->fmt.encoding);
+		size_t buffer_samples = sh->maxbuf/samplesize;
+		grow_buf(sh, buffer_samples*samplesize);
+		if(buffer_samples > sh->bufs/samplesize)
 		{
-			case 1:
-				write(STDOUT_FILENO, &val, sizeof(val));
-			break;
-			case 2:
-				printf("%g\n", val);
-			break;
+			ret = SYN123_DOOM;
+			goto setup_geiger_end;
 		}
+		int outchannels = sh->fmt.channels;
+		sh->fmt.channels = 1;
+		size_t buffer_bytes = syn123_read(sh, sh->buf, buffer_samples*samplesize);
+		sh->fmt.channels = outchannels;
+		geiger_init(handle, activity, sh->fmt.rate);
+		if(buffer_bytes != buffer_samples*samplesize)
+		{
+			ret = SYN123_WEIRD;
+			goto setup_geiger_end;
+		}
+		sh->samples = buffer_samples;
 	}
-	fprintf(stderr, "%lu events in %g s\n", events, duration);
-	return 0;
+
+setup_geiger_end:
+	if(ret != SYN123_OK)
+		syn123_setup_silence(sh);
+	if(period)
+		*period = sh->samples;
+	return ret;
 }
